--- a/css/committees.css
+++ b/css/committees.css
@@ -1,11 +1,12 @@
 /* General */
 header {
-  background-color: black;
   color: white;
 }
 .special-heading-container {
   padding: 5% 5% 10% 5%;
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 .special-heading-container img {
   width: 26%;
@@ -180,18 +181,23 @@ header {
   .common-heading {
     font-size: 200%;
   }
-  .heading-container {
-    padding: 10% 0 14% 0;
-  }
+
   .common-heading:before {
     height: 1px;
   }
   header {
     display: flex;
+    height: 750px;
+    padding: 0px;
+    padding-top: 15%;
+    margin: 0px;
     align-items: center;
   }
-  .special-heading-container img {
+
+
+  .special-heading-container{
     width: 100%;
+    height: 100%;
   }
   .main-heading {
     font-size: 200%;
@@ -200,7 +206,7 @@ header {
     font-size: 100%;
   }
   .main-subheading  {
-    font-size: 100%;
+    font-size: 1.5rem;
   }
   .main-subheading:before {
     height: 1px;
@@ -216,12 +222,8 @@ header {
   }
   .text-container {
     font-size: 120%;
-    padding: 2.5% 0;
   }
-  /* .coming-soon {
-    font-size: 120%;
-    margin: 10% auto;
-  } */
+
 
   .eb-member-container {
   	display: flex;
